--- a/.golangci.yml
+++ b/.golangci.yml
@@ -18,6 +18,16 @@ linters:
     - unconvert
     - whitespace
   settings:
+    staticcheck:
+      checks:
+        - all
+        - -QF1008
+        - -SA1019
+        - -ST1000
+        - -ST1003
+        - -ST1016
+        - -ST1020
+        - -ST1021
     errcheck:
       check-type-assertions: false
       check-blank: true
